objects/RFQ__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_IPR__c</fullName>
        <label>Accepted IPR</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RFQs</relationshipLabel>
        <relationshipName>RFQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>RFQs</relationshipLabel>
        <relationshipName>RFQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RFQs</relationshipLabel>
        <relationshipName>RFQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFQ_RFI_No__c</fullName>
        <formula>TEXT(Type__c)&amp; &quot;-&quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFQ/RFI No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Preliminary Sizing</fullName>
                </value>
                <value>
                    <fullName>Final Sizing</fullName>
                </value>
                <value>
                    <fullName>Ready for B &amp; P</fullName>
                </value>
                <value>
                    <fullName>Submitted to Customer</fullName>
                </value>
                <value>
                    <fullName>Ready for BNP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RFQ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>